# damiao-motors

./: .gitignore  README.md  can_probe.py  crsf_input.py  crsf_read.py  damiao.py  dmcan.py  find_motor.py  hello_spin.py  hello_spin_two.py  imu_debug.py  joint_calibration.py  motor_gui.py  motor_gui.py.bak  policy_r3_robust_hard.onnx  policy_runtime.py  probe_dmcan.py  probe_mb.py  pyproject.toml  relay_toggle.py  robot_config.py  robot_viz.py  run_gui.sh  scan_bus.py  serial_probe.py  serial_timing_probe.py  set_motor_id.py  set_param.py  setup_runtime.py  sync_to_robot.sh
runtime/: dmcan.h  fastsleep.c  libdm_device.dylib
