[project]
name = "motor-control"
version = "0.1.0"
description = "Damiao J6006-2EC control from macOS over USB-CAN"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyserial>=3.5",
    "numpy>=2.0",
    "motorbridge>=0.4.8",
    "viser>=0.2.0",
    "gpiozero>=2.0",
    "pyyaml>=6.0",
    "trimesh>=4.0",
    "onnxruntime>=1.20",
    "lgpio>=0.2 ; sys_platform == 'linux'",
]
